#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcInput
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-10-14
2015-04-20 David Schneider
- Adjust trace log message for SharedFile. Add file descriptor to trackdown file
  exhaustion bugs.

Tag: V00-10-13
2015-03-05 David Schneider
- JIRA issue PSAS-85, add live mode support
	
Tag: V00-10-12
2015-03-03 David Schneider
- small data JIRA issue PSAS-85
- update XtcFileName with boolean flag for small data. 
  some constructors take additional parameter about small
  contains logic for distinguishing small data file (ends with .smd.xtc)
  contains logic to return large xtc filename from small (strip out .smd)	
  change sort order so all small xtc come before large xtc
- Note: live mode not implemented yet - LiveFilesDB only looks for large xtc files

Tag: V00-10-11
2015-02-12 David Schneider
- add parameter PSXtcInput.XtcInputModule.runLiveTimeout to get psana to wait for 
  new runs in live mode. JRIA issue PSAS-108

Tag: V00-10-10
2014-11-24 David schneider
- add check for corrupted xtc to address JIRA issue PSAS-71

Tag: V00-10-09
2014-09-18 David schneider
- adjust debug printout

Tag: V00-10-08
2014-09-16 David Schneider
- reduce debug verbosity

Tag: V00-10-07
2014-09-02 David Schneider
- change jump options from second event to third event. Allows psana to
  process both beginRun and Configure before jump. Then user modules can
  get a valid run number in beginRun

Tag: V00-10-06
2014-08-28 David Schneider
- Give new DgramReader argument default value for backward compatibility.
  New argument broke build with O2OTranslator

Tag: V00-10-05
2014-08-27 David Schneider
- add feature: jump to arbitrary offsets in xtc files before second event. 